tests/transpiler/x/py/user_type_literal.error
run: exit status 1
Traceback (most recent call last):
  File "/workspace/mochi/tests/transpiler/x/py/user_type_literal.py", line 15, in <module>
    print(book.author["name"])
          ~~~~~~~~~~~^^^^^^^^
TypeError: 'Person' object is not subscriptable
