tests/transpiler/x/py/user_type_literal.py
# Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:07 +0700
from dataclasses import dataclass

@dataclass
class Person:
    name: str
    age: int

@dataclass
class Book:
    title: str
    author: Person

book = Book(title="Go", author=Person(name="Bob", age=42))
print(book.author["name"])
